--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="app" v-cloak>
       <div style="display: flex; align-items: center;">
-        <img src="/assets/images/books.png" style="height: 75px;" />
+        <img src="/assets/images/logo.png" style="height: 75px;" />
         &nbsp;&nbsp;&nbsp;
         <div>
           <h1>
