--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Makalah Parser</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/site.webmanifest" />
     <script
       src="https://kit.fontawesome.com/bd1b110a05.js"
       crossorigin="anonymous"
@@ -35,7 +53,7 @@
 
       <hr />
       <div>
-        <p>Upload multiple PDF files to generate graphic:</p>
+        <p>Upload multiple PDF files:</p>
         <input
           type="file"
           ref="fileinput"
@@ -44,8 +62,8 @@
           :disabled="processing"
         />
         <br /><br />
-        <div v-if="processing" style="display: flex; align-items: center;">
-          <img src="img/gears.gif" style="height: 50px;" />
+        <div v-show="processing" style="display: flex; align-items: center;">
+          <img src="assets/images/readingbook.gif" style="height: 80px;" />
           &nbsp;&nbsp;
           <p>
             <i class="fa fa-file" aria-hidden="true"></i>
@@ -54,16 +72,35 @@
         </div>
         <button
           class="button blue"
-          v-else
+          v-show="!processing"
           type="button"
           @click="initProcessFullText"
         >
           UPLOAD NOW
         </button>
       </div>
+      <br />
+      <div>
+        <div id="chart">
+          <span id="data" style="display: none;">{{nodesJson}}</span>
+          <div id="control">
+            <button type="button" onclick="toggleNameAndYear()">
+              Name & Year Only
+            </button>
+            <button type="button" onclick="toggleSize()">
+              Size Only
+            </button>
+            <button type="button" onclick="reloadGraph()">Reset</button>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="js/engine.js?v=1.0.0"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.17.1/parser.min.js"></script>
+    <script src="js/lib/FileSaver.min.js"></script>
+    <script src="js/lib/d3.v4.min.js"></script>
+    <script src="js/graph.js"></script>
+    <script src="js/app.js?v=1.0.0"></script>
   </body>
 </html>
