fixed path errors

--- a/graph/index.html
+++ b/graph/index.html
@@ -7,21 +7,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/apple-touch-icon.png"
+      href="../assets/images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon-32x32.png"
+      href="../assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon-16x16.png"
+      href="../assets/images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/site.webmanifest" />
+    <link rel="manifest" href="../assets/site.webmanifest" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons"
@@ -34,12 +34,12 @@
       rel="stylesheet"
       href="https://unpkg.com/vue-material/dist/theme/default.css"
     />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
   <body>
     <div id="app" v-cloak>
       <div class="md-layout md-alignment-center" style="padding: 10px 0px;">
-        <img src="/assets/images/logo.png" style="height: 75px;" />
+        <img src="../assets/images/logo.png" style="height: 75px;" />
         &nbsp;&nbsp;&nbsp;
         <div>
           <h1>
@@ -117,10 +117,10 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/vue-material"></script>
-    <script src="/js/lib/d3.v4.min.js"></script>
-    <!-- <script src="/js/graph.js"></script> -->
+    <script src="../js/lib/d3.v4.min.js"></script>
+    <!-- <script src="../js/graph.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.17.1/parser.min.js"></script> -->
-    <script src="/js/lib/FileSaver.min.js"></script>
-    <script src="/js/graph-vue.js"></script>
+    <script src="../js/lib/FileSaver.min.js"></script>
+    <script src="../js/graph-vue.js"></script>
   </body>
 </html>
