--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/apple-touch-icon.png"
+      href="assets/images/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/assets/images/favicon-32x32.png"
+      href="assets/images/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/images/favicon-16x16.png"
+      href="assets/images/favicon-16x16.png"
     />
-    <link rel="manifest" href="/assets/site.webmanifest" />
+    <link rel="manifest" href="assets/site.webmanifest" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Material+Icons"
@@ -43,7 +43,7 @@
         md-mode="indeterminate"
       ></md-progress-bar>
       <div class="md-layout md-alignment-center" style="padding: 10px 0px;">
-        <img src="/assets/images/logo.png" style="height: 75px;" />
+        <img src="assets/images/logo.png" style="height: 75px;" />
         &nbsp;&nbsp;&nbsp;
         <div>
           <h1>
