fixed another path error

--- a/graph/index.html
+++ b/graph/index.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <hr />
-      <md-button @click="window.location.href='/'">
+      <md-button @click="window.location.href='../'">
         <small>&larr; Parse Again</small>
       </md-button>
 
